Fix alignment of results + fix mobile responsiveness

--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -126,7 +126,7 @@
     display: inline-block; //for width and height to work
     margin-top: 10px;
     width: 300px;
-    min-height: 75px;
+    min-height: 90px;
     text-transform:none;
     font-size: 0.7em;
     span {
@@ -176,6 +176,19 @@
         font-family: 'jonze',  sans-serif;
         font-size: 1.8em;
         margin-left: 10px;
+      }
+      .showResultsButton {
+        float: left;
+      }
+      .hideResults {
+        height: 0;
+      }
+      .showResults {
+        float: left;
+        .resultsDiv {
+          height: 106px;
+          line-height: 106px;
+        }
       }
     }
   }
@@ -318,7 +331,7 @@ $medium-only: "only screen and (min-width : #{$small-screen}) and (max-width : #
     width: calc( 100% / 5);
   }
 }
-@media only screen and (max-width : 1100px) {
+@media only screen and (max-width : 1145px) {
   .smallCard {
   }
   .smallCardOut {
@@ -352,7 +365,7 @@ $medium-only: "only screen and (min-width : #{$small-screen}) and (max-width : #
   }
 }
 
-@media only screen and (max-width : 430px) {
+@media only screen and (max-width : 435px) {
   .questionList {
     margin: 75px 0px;
   }
@@ -360,18 +373,39 @@ $medium-only: "only screen and (min-width : #{$small-screen}) and (max-width : #
   .ngdialog.ngdialog-theme-default .ngdialog-content {
     width: 100%;
     height: 450px;
-    margin-top: -87px;
+    margin-top: -125px;
   }
   .questionCard {
+    font-size: 1.2em;
+    line-height: 1em;
     .FUguy {
       width: 100px;
       top: 40%;
     }
     .md-button {
-      width: 66%;
+      line-height: 0.95em;
+      min-height: 65px;
+      width: 250px;
     }
     .stamp {
       width: 33%;
+    }
+    .questionAnswers {
+      .buttons {
+        .showResultsButton {
+          .resultsDiv {
+            min-height: 65px;
+            line-height: 65px;
+            margin-top: 10px;
+          }
+        }
+        .showResults {
+          .resultsDiv {
+            height: 80px;
+            line-height: 80px;
+          }
+        }
+      }
     }
   }
   .headerFUIR {
@@ -383,6 +417,13 @@ $medium-only: "only screen and (min-width : #{$small-screen}) and (max-width : #
 
   }
   .smallCardOut {
-    height: 265px;
+//    height: 265px;
   }
+
+  .smallCard {
+    .questionText {
+      font-size: 1em;
+    }
+  }
+
 }
